--- a/Demo1/index.html
+++ b/Demo1/index.html
@@ -7,6 +7,16 @@
     <title>Git & Github</title>
 </head>
 <body>
-    <h1>10 lệnh Git cơ bản nha</h1>
+    <h1 style="color: red;"><b>10 lệnh Git cơ bản</b></h1>
+    <h2>1) git config</h2>
+    <h2>2) git init</h2>
+    <h2>3) git clone</h2>
+    <h2>4) git status</h2>
+    <h2>5) git add</h2>
+    <h2>6) git commit</h2>
+    <h2>7) git push/git pull</h2>
+    <h2>8) git branch</h2>
+    <h2>9) git checkout</h2>
+    <h2>10) git stash</h2>
 </body>
 </html>
